--- a/config/AppliedEnergistics2/Facades.cfg
+++ b/config/AppliedEnergistics2/Facades.cfg
@@ -2193,6 +2193,7 @@ botania {
     B:flower.9=false
     B:forestDrum=false
     B:forestDrum.1=false
+    B:forestDrum.2=false
     B:forestEye=false
     B:ghostRail=false
     B:hourglass=false
@@ -4295,6 +4296,7 @@ eln {
     B:ElnSixNode.5904=false
     B:ElnSixNode.5952=false
     B:ElnSixNode.5953=false
+    B:ElnSixNode.5954=false
     B:ElnSixNode.6016=false
     B:ElnSixNode.6017=false
     B:ElnSixNode.6018=false
@@ -4337,6 +4339,7 @@ eln {
     B:ElnSixNode.7424=false
     B:ElnSixNode.7488=false
     B:ElnSixNode.7492=false
+    B:ElnSixNode.7493=false
     B:ElnSixNode.7496=false
     B:ElnTransparentNode=false
     B:ElnghostBlock=false
@@ -4432,6 +4435,26 @@ enhancedportals {
     B:frame.8=false
     B:frame.9=false
     B:portal=false
+}
+
+
+enviromine {
+    B:burningcoal=false
+    B:davylamp=false
+    B:davylamp.1=false
+    B:davylamp.2=false
+    B:elevator=false
+    B:elevator.1=false
+    B:elevator.2=false
+    B:elevator.3=false
+    B:esky=false
+    B:firegas=false
+    B:firetorch=false
+    B:flammablecoal=true
+    B:freezer=false
+    B:gas=false
+    B:nophysblock=false
+    B:offtorch=false
 }
 
 
@@ -6956,6 +6979,73 @@ iguanatweakstconstruct {
 }
 
 
+immersiveengineering {
+    B:hemp=false
+    B:metalDecoration=false
+    B:metalDecoration.1=false
+    B:metalDecoration.2=false
+    B:metalDecoration.3=false
+    B:metalDecoration.4=false
+    B:metalDecoration.5=false
+    B:metalDecoration.6=false
+    B:metalDecoration.7=false
+    B:metalDecoration.8=false
+    B:metalDecoration.9=false
+    B:metalDevice=false
+    B:metalDevice.1=false
+    B:metalDevice.10=false
+    B:metalDevice.11=false
+    B:metalDevice.12=false
+    B:metalDevice.13=false
+    B:metalDevice.14=false
+    B:metalDevice.2=false
+    B:metalDevice.3=false
+    B:metalDevice.4=false
+    B:metalDevice.5=false
+    B:metalDevice.6=false
+    B:metalDevice.7=false
+    B:metalDevice.8=false
+    B:metalDevice.9=false
+    B:metalMultiblock=false
+    B:metalMultiblock.2=false
+    B:metalMultiblock.3=false
+    B:ore=false
+    B:ore.1=false
+    B:ore.2=false
+    B:ore.3=false
+    B:ore.4=false
+    B:stoneDevice=false
+    B:stoneDevice.1=false
+    B:stoneDevice.2=false
+    B:stoneDevice.3=false
+    B:stoneDevice.4=false
+    B:storage=false
+    B:storage.1=false
+    B:storage.10=false
+    B:storage.2=false
+    B:storage.3=false
+    B:storage.4=false
+    B:storage.5=false
+    B:storage.6=false
+    B:storage.7=false
+    B:storage.8=false
+    B:storage.9=false
+    B:woodenDecoration=false
+    B:woodenDecoration.1=false
+    B:woodenDecoration.2=false
+    B:woodenDecoration.4=false
+    B:woodenDecoration.5=false
+    B:woodenDecoration.6=false
+    B:woodenDevice=false
+    B:woodenDevice.1=false
+    B:woodenDevice.2=false
+    B:woodenDevice.3=false
+    B:woodenDevice.4=false
+    B:woodenDevice.5=false
+    B:woodenStairs=false
+}
+
+
 ironchest {
     B:BlockIronChest=false
     B:BlockIronChest.1=false
@@ -8132,6 +8222,33 @@ minefactoryreloaded {
     B:stone=false
     B:tank=false
     B:vinescaffold=false
+}
+
+
+mo {
+    B:androidstation=false
+    B:decomposer=false
+    B:dilithiumore=true
+    B:fusionreactorcoil=true
+    B:fusionreactorcontroller=false
+    B:gravitationalanomaly=false
+    B:gravitationalstabilizer=false
+    B:machinehull=true
+    B:matteranalyzer=false
+    B:matterpipe=false
+    B:matterrecycler=false
+    B:microwave=false
+    B:networkpipe=false
+    B:networkrouter=false
+    B:networkswitch=false
+    B:patternmonitor=false
+    B:patternstorage=false
+    B:replicator=false
+    B:solarpanel=false
+    B:transporter=false
+    B:tritaniumblock=true
+    B:tritaniumore=true
+    B:weaponstation=false
 }
 
 
@@ -9512,6 +9629,82 @@ refinedrelocation {
     B:sortingIronChest.5=false
     B:sortingIronChest.6=false
     B:sortingIronChest.7=false
+}
+
+
+rftools {
+    B:activityProbeBlock=true
+    B:biomeAbsorberBlock=false
+    B:blockProtectorBlock=false
+    B:builderBlock=false
+    B:counterBlock=false
+    B:crafterBlock1=false
+    B:crafterBlock2=false
+    B:crafterBlock3=false
+    B:creativeDimensionBuilderBlock=false
+    B:destinationAnalyzerBlock=true
+    B:dialingDeviceBlock=false
+    B:dimensionBuilderBlock=false
+    B:dimensionEditorBlock=false
+    B:dimensionEnscriberBlock=false
+    B:dimensionMonitorBlock=false
+    B:dimensionalBlankBlock=true
+    B:dimensionalBlock=true
+    B:dimensionalCross2Block=true
+    B:dimensionalCrossBlock=true
+    B:dimensionalPattern1Block=true
+    B:dimensionalPattern2Block=true
+    B:dimensionalShardBlock=true
+    B:dimensionalSmallBlocks=true
+    B:dimletFilterBlock=false
+    B:dimletResearcherBlock=false
+    B:dimletScramblerBlock=false
+    B:dimletWorkbenchBlock=false
+    B:enderMonitorBlock=false
+    B:endergenicBlock=false
+    B:energyExtractorBlock=false
+    B:environmentalControllerBlock=false
+    B:invisibleShieldBlock=false
+    B:itemFilterBlock=false
+    B:liquidAbsorberBlock=false
+    B:liquidMonitorBlock=false
+    B:machineBase=true
+    B:machineFrame=true
+    B:machineInfuserBlock=false
+    B:materialAbsorberBlock=false
+    B:matterBeamerBlock=false
+    B:matterBoosterBlock=true
+    B:matterReceiverBlock=false
+    B:matterTransmitterBlock=false
+    B:modularStorageBlock=false
+    B:pearlInjectorBlock=false
+    B:proxyBlock=false
+    B:redstoneReceiverBlock=false
+    B:redstoneTransmitterBlock=false
+    B:relayBlock=false
+    B:remoteStorageBlock=false
+    B:rfMonitorBlock=false
+    B:screenBlock=false
+    B:screenControllerBlock=false
+    B:screenHitBlock=false
+    B:securityManagerBlock=false
+    B:sequencerBlock=false
+    B:shieldBlock=false
+    B:shieldBlock2=false
+    B:shieldBlock3=false
+    B:shieldTemplateBlock=false
+    B:simpleDialerBlock=false
+    B:solidShieldBlock=false
+    B:spaceChamberBlock=false
+    B:spaceChamberControllerBlock=false
+    B:spaceProjectorBlock=false
+    B:spawnerBlock=false
+    B:storageScannerBlock=false
+    B:supportBlock=false
+    B:timeAbsorberBlock=false
+    B:timerBlock=false
+    B:volcanicBlock=false
+    B:volcanicCoreBlock=false
 }
 
 
