--- a/config/Eln.cfg
+++ b/config/Eln.cfg
@@ -40,6 +40,8 @@ gameplay {
 
 
 general {
+    B:analyticsEnable=true
+    S:playerUUID=f8578a92-071f-426d-bf3c-d0bea93bcb57
     B:versionCheckEnable=false
 }
 
