--- a/config/IguanaTinkerTweaks/MaterialOverride.cfg
+++ b/config/IguanaTinkerTweaks/MaterialOverride.cfg
@@ -68,6 +68,43 @@
 ##########################################################################################################
 
 materials {
+
+    enderium {
+        I:attack=3
+        S:color=light_purple
+        I:durability=880
+        D:handleModifier=2.0
+        I:harvestLevel=2
+        I:miningSpeed=2300
+        I:reinforced=1
+        D:shoddy=0.0
+        D:xpAmount=1.0
+    }
+
+    signalum {
+        I:attack=2
+        S:color=light_purple
+        I:durability=640
+        D:handleModifier=1.0
+        I:harvestLevel=2
+        I:miningSpeed=1300
+        I:reinforced=0
+        D:shoddy=0.0
+        D:xpAmount=1.0
+    }
+
+    lumium {
+        I:attack=2
+        S:color=light_purple
+        I:durability=1200
+        D:handleModifier=1.2000000476837158
+        I:harvestLevel=2
+        I:miningSpeed=300
+        I:reinforced=2
+        D:shoddy=0.0
+        D:xpAmount=1.0
+    }
+
 }
 
 
