--- a/config/IguanaTinkerTweaks/ToolDefaults.cfg
+++ b/config/IguanaTinkerTweaks/ToolDefaults.cfg
@@ -359,6 +359,15 @@ hardcoreenderexpansion {
 }
 
 
+immersiveengineering {
+
+    tool {
+        I:IE_HAMMER=2
+    }
+
+}
+
+
 magicalcrops {
 
     magicalcrops_cruciopickaxe {
