--- a/config/Mekanism.cfg
+++ b/config/Mekanism.cfg
@@ -52,6 +52,7 @@ general {
     B:PrefilledPortableTanks=true
     D:RFToJoules=0
     I:SaltPerChunk=2
+    D:SolarEvaporationSpeed=1.0
     B:SpawnBabySkeletons=true
     S:"Temperature Units"=K
     I:TinPerChunk=0
