--- a/config/SpiceOfLife.cfg
+++ b/config/SpiceOfLife.cfg
@@ -40,7 +40,7 @@ server {
     # NOTE: When affect.food.hunger.values is true, saturation bonuses of foods will automatically decrease as the hunger value of the food decreases
     # Setting this to true when affect.food.hunger.values is true will make saturation bonuses decrease disproportionately more than hunger values
     # Setting this to true and affect.food.saturation.modifiers to false will make diminishing returns affect saturation only
-    B:affect.food.saturation.modifiers=false
+    B:affect.food.saturation.modifiers=true
 
     # If true, foods with negative hunger values will be made more negative as nutritional value decreases
     # NOTE: affect.food.hunger.values must be true for this to have any affect
@@ -94,7 +94,7 @@ server {
     # 	cur_saturation : The current saturation value of the player
     # 	total_food_eaten : The all-time total number of times any food has been eaten by the player
     # 
-    S:food.modifier.formula=MAX(0, (1 - count/12))^MIN(8, food_hunger_value)
+    S:food.modifier.formula=MAX(0, (1 - count/6))^MIN(8, food_hunger_value)
 
     # If true, a food journal will be given to each player as a starting item
     B:give.food.journal.as.starting.item=false
