--- a/config/atg/biome_modifiers.cfg
+++ b/config/atg/biome_modifiers.cfg
@@ -1218,6 +1218,17 @@ atum {
 }
 
 
+enviromine {
+
+    Caves {
+        B:AllowVillages=true
+        B:Enable=true
+        D:OccuranceMultiplier=1.0
+    }
+
+}
+
+
 erebus {
 
     "Undergound Jungle" {
