--- a/config/bettersleeping.cfg
+++ b/config/bettersleeping.cfg
@@ -34,6 +34,9 @@ config {
     # How many sleep ticks are given to player when lying in bed [range: 0 ~ 23999, default: 4]
     I:giveSleepCounterOnSleep=4
 
+    # How much hunger is lost for slept tick [0 = none]
+    D:hungerPerSleptTick=1.0E-5
+
     # How much sleep counter you can reach before being denied sleep privilege. [range: 1 ~ 2147483647, default: 18000]
     I:maximumSleepCounter=18000
 
@@ -96,10 +99,10 @@ config {
         # Enable caffeine mechanics [default: true]
         B:enableCaffeine=true
 
-        # Multiplier for ItemFood (most of the food). Hunger = gained caffeine [range: 0.0 ~ 100.0, default: 6.0]
+        # Multiplier for ItemFood (most of the food). Hunger = gained caffeine [range: 0.0 ~ 23999.0, default: 6.0]
         S:itemFoodHungerMult=6.0
 
-        # Multiplier for ItemFood (most of the food). Saturation = regained tiredness [range: 0.0 ~ 1000.0, default: 200.0]
+        # Multiplier for ItemFood (most of the food). Saturation = regained tiredness [range: 0.0 ~ 23999.0, default: 200.0]
         S:itemFoodSaturationMult=200.0
 
         # How much tiredness you regain for drinking/eating valid item (NOT ItemFood) [range: 1 ~ 23999, default: 200]
