--- a/config/bigtrees/individualbiomes.cfg
+++ b/config/bigtrees/individualbiomes.cfg
@@ -4319,6 +4319,37 @@
     S:"drzhark.WyvernBiome Tall Oak Autumn"=
     S:"drzhark.WyvernBiome Tall Oak Brown"=
     S:"drzhark.WyvernBiome Yellow Big Birch"=
+    S:"enviromine.Caves Big Birch 0"=
+    S:"enviromine.Caves Big Birch 1"=
+    S:"enviromine.Caves Big Pine 0"=
+    S:"enviromine.Caves Big Pine 1"=
+    S:"enviromine.Caves Block Maple"=
+    S:"enviromine.Caves Block Oak 0"=
+    S:"enviromine.Caves Block Oak Autumn"=
+    S:"enviromine.Caves Block Oak Brown"=
+    S:"enviromine.Caves Block Oak Dark"=
+    S:"enviromine.Caves Cyprus Oak 0"=
+    S:"enviromine.Caves Cyprus Willow"=
+    S:"enviromine.Caves Dark Hat"=
+    S:"enviromine.Caves Dead Tree 0"=
+    S:"enviromine.Caves Great Oak 0"=
+    S:"enviromine.Caves Great Oak Autumn"=
+    S:"enviromine.Caves Great Oak Brown"=
+    S:"enviromine.Caves Great Oak Dark"=
+    S:"enviromine.Caves Hat Sacred Tree"=
+    S:"enviromine.Caves Hat Tree 0"=
+    S:"enviromine.Caves Pertrified Dead Tree"=
+    S:"enviromine.Caves Swamp Oak 0"=
+    S:"enviromine.Caves Tall Cherry"=
+    S:"enviromine.Caves Tall Dark Oak"=
+    S:"enviromine.Caves Tall Fir"=
+    S:"enviromine.Caves Tall Jacaranda"=
+    S:"enviromine.Caves Tall Magic Tree"=
+    S:"enviromine.Caves Tall Maple"=
+    S:"enviromine.Caves Tall Oak 0"=
+    S:"enviromine.Caves Tall Oak Autumn"=
+    S:"enviromine.Caves Tall Oak Brown"=
+    S:"enviromine.Caves Yellow Big Birch"=
     S:"erebus.Elysian Fields Big Birch 0"=
     S:"erebus.Elysian Fields Big Birch 1"=
     S:"erebus.Elysian Fields Big Pine 0"=
