--- a/config/enderio/EnderIO.cfg
+++ b/config/enderio/EnderIO.cfg
@@ -729,13 +729,13 @@ misc {
     B:powerConduitOutputMJ=true
 
     # The maximum IO for the tier 1 power conduit
-    I:powerConduitTierOneRF=640
+    I:powerConduitTierOneRF=256
 
     # The maximum IO for the tier 3 power conduit
-    I:powerConduitTierThreeRF=20480
+    I:powerConduitTierThreeRF=4096
 
     # The maximum IO for the tier 2 power conduit
-    I:powerConduitTierTwoRF=5120
+    I:powerConduitTierTwoRF=1024
 
     # The amount of power generated per BC engine cycle. Examples: BC Oil = 3, BC Fuel = 6
     I:rocketFuelPowerPerCycleRF=160
@@ -847,6 +847,9 @@ rail {
 
 
 "recipe settings" {
+    # When enabled peaceful recipes are added for soulbinder based crafting components.
+    B:addPeacefulRecipes=false
+
     # When enabled blocks with tile entities (e.g. machines) can be used as paint targets.
     B:allowTileEntitiesAsPaintSource=true
 
