--- a/config/Botania.cfg
+++ b/config/Botania.cfg
@@ -53,7 +53,7 @@ general {
     B:manaEnchanter.enabled=true
 
     # Set this to false to disable the Mana Fluxfield (generates RF from mana). This only disables the entry and creation. Old ones that are already in the world will stay.
-    B:manaFluxfield.enabled=true
+    B:manaFluxfield.enabled=false
 
     # Set this to true to disable the mana spreader shooting sound.
     B:manaSpreaders.silent=false
@@ -62,7 +62,7 @@ general {
     B:matrixMode.enabled=false
 
     # Set to anything other than -1 for passive generation flowers (dayblooms, nightshades, hydroangeas) to die after a specific amount of ticks. 24000 is 2 Minecraft days, that's a recomended value.
-    I:passiveWither.time=-1
+    I:passiveWither.time=24000
 
     # Set this to true to set the power system's particles to be a lot more subtle. Good for low-end systems, if the particles are causing lag.
     B:powerSystem.subtle=true
@@ -74,7 +74,7 @@ general {
     B:references.enabled=true
 
     # Set this to false to disable the Relic System. This only disables the entries, drops and achievements. Old ones that are already in the world will stay.
-    B:relics.enabled=true
+    B:relics.enabled=false
 
     # Set this to false to make the Ring of Odin not apply fire resistance. Mostly for people who use Witchery transformations.
     B:ringOfOdin.fireResist=true
@@ -2116,6 +2116,30 @@ shedding {
     I:erebus.zombieAnt.metadata=0
     I:erebus.zombieAnt.rate=-1
 
+    # Configuration of Shedding for failed_chicken
+    S:failed_chicken.item=
+    I:failed_chicken.lexiconDisplaySize=40
+    I:failed_chicken.metadata=0
+    I:failed_chicken.rate=-1
+
+    # Configuration of Shedding for failed_cow
+    S:failed_cow.item=
+    I:failed_cow.lexiconDisplaySize=40
+    I:failed_cow.metadata=0
+    I:failed_cow.rate=-1
+
+    # Configuration of Shedding for failed_pig
+    S:failed_pig.item=
+    I:failed_pig.lexiconDisplaySize=40
+    I:failed_pig.metadata=0
+    I:failed_pig.rate=-1
+
+    # Configuration of Shedding for failed_sheep
+    S:failed_sheep.item=
+    I:failed_sheep.lexiconDisplaySize=40
+    I:failed_sheep.metadata=0
+    I:failed_sheep.rate=-1
+
     # Configuration of Shedding for jurassicraft.Ankylosaurus
     S:jurassicraft.Ankylosaurus.item=
     I:jurassicraft.Ankylosaurus.lexiconDisplaySize=40
@@ -2230,6 +2254,12 @@ shedding {
     I:jurassicraft.Velociraptor.metadata=0
     I:jurassicraft.Velociraptor.rate=-1
 
+    # Configuration of Shedding for mad_scientist
+    S:mad_scientist.item=
+    I:mad_scientist.lexiconDisplaySize=40
+    I:mad_scientist.metadata=0
+    I:mad_scientist.rate=-1
+
     # Configuration of Shedding for menagerie.ant
     S:menagerie.ant.item=
     I:menagerie.ant.lexiconDisplaySize=40
@@ -2283,6 +2313,12 @@ shedding {
     I:menagerie.rat.lexiconDisplaySize=40
     I:menagerie.rat.metadata=0
     I:menagerie.rat.rate=-1
+
+    # Configuration of Shedding for rouge_android
+    S:rouge_android.item=
+    I:rouge_android.lexiconDisplaySize=40
+    I:rouge_android.metadata=0
+    I:rouge_android.rate=-1
     S:witherSkeleton.item=
     I:witherSkeleton.lexiconDisplaySize=40
     I:witherSkeleton.metadata=0
