--- a/config/Botania.cfg
+++ b/config/Botania.cfg
@@ -218,6 +218,12 @@ shedding {
     I:CaveSpider.metadata=0
     I:CaveSpider.rate=-1
 
+    # Configuration of Shedding for Celebrity
+    S:Celebrity.item=
+    I:Celebrity.lexiconDisplaySize=40
+    I:Celebrity.metadata=0
+    I:Celebrity.rate=-1
+
     # Configuration of Shedding for Chicken
     S:Chicken.item=minecraft:feather
     I:Chicken.lexiconDisplaySize=20
@@ -2140,6 +2146,12 @@ shedding {
     I:failed_sheep.metadata=0
     I:failed_sheep.rate=-1
 
+    # Configuration of Shedding for headcrumbs.Human
+    S:headcrumbs.Human.item=
+    I:headcrumbs.Human.lexiconDisplaySize=40
+    I:headcrumbs.Human.metadata=0
+    I:headcrumbs.Human.rate=-1
+
     # Configuration of Shedding for jurassicraft.Ankylosaurus
     S:jurassicraft.Ankylosaurus.item=
     I:jurassicraft.Ankylosaurus.lexiconDisplaySize=40
@@ -2314,7 +2326,11 @@ shedding {
     I:menagerie.rat.metadata=0
     I:menagerie.rat.rate=-1
 
-    # Configuration of Shedding for rouge_android
+    # Configuration of Shedding for rogue_android
+    S:rogue_android.item=
+    I:rogue_android.lexiconDisplaySize=40
+    I:rogue_android.metadata=0
+    I:rogue_android.rate=-1
     S:rouge_android.item=
     I:rouge_android.lexiconDisplaySize=40
     I:rouge_android.metadata=0
