--- a/config/IguanaTinkerTweaks/BlockDefaults.cfg
+++ b/config/IguanaTinkerTweaks/BlockDefaults.cfg
@@ -4226,6 +4226,22 @@ blocks_pickaxe {
     I:"chisel:futura:7"=0
     I:"chisel:futura:8"=0
     I:"chisel:futura:9"=0
+    I:"chisel:futuraCircuit:0"=0
+    I:"chisel:futuraCircuit:1"=0
+    I:"chisel:futuraCircuit:10"=0
+    I:"chisel:futuraCircuit:11"=0
+    I:"chisel:futuraCircuit:12"=0
+    I:"chisel:futuraCircuit:13"=0
+    I:"chisel:futuraCircuit:14"=0
+    I:"chisel:futuraCircuit:15"=0
+    I:"chisel:futuraCircuit:2"=0
+    I:"chisel:futuraCircuit:3"=0
+    I:"chisel:futuraCircuit:4"=0
+    I:"chisel:futuraCircuit:5"=0
+    I:"chisel:futuraCircuit:6"=0
+    I:"chisel:futuraCircuit:7"=0
+    I:"chisel:futuraCircuit:8"=0
+    I:"chisel:futuraCircuit:9"=0
     I:"chisel:gold2:0"=0
     I:"chisel:gold2:1"=0
     I:"chisel:gold2:10"=0
@@ -4690,6 +4706,22 @@ blocks_pickaxe {
     I:"chisel:redstone_block:7"=0
     I:"chisel:redstone_block:8"=0
     I:"chisel:redstone_block:9"=0
+    I:"chisel:sandstone2:0"=0
+    I:"chisel:sandstone2:1"=0
+    I:"chisel:sandstone2:10"=0
+    I:"chisel:sandstone2:11"=0
+    I:"chisel:sandstone2:12"=0
+    I:"chisel:sandstone2:13"=0
+    I:"chisel:sandstone2:14"=0
+    I:"chisel:sandstone2:15"=0
+    I:"chisel:sandstone2:2"=0
+    I:"chisel:sandstone2:3"=0
+    I:"chisel:sandstone2:4"=0
+    I:"chisel:sandstone2:5"=0
+    I:"chisel:sandstone2:6"=0
+    I:"chisel:sandstone2:7"=0
+    I:"chisel:sandstone2:8"=0
+    I:"chisel:sandstone2:9"=0
     I:"chisel:sandstone:0"=0
     I:"chisel:sandstone:1"=0
     I:"chisel:sandstone:10"=0
@@ -4898,6 +4930,22 @@ blocks_pickaxe {
     I:"chisel:uraniumblock:7"=0
     I:"chisel:uraniumblock:8"=0
     I:"chisel:uraniumblock:9"=0
+    I:"chisel:voidstone2:0"=0
+    I:"chisel:voidstone2:1"=0
+    I:"chisel:voidstone2:10"=0
+    I:"chisel:voidstone2:11"=0
+    I:"chisel:voidstone2:12"=0
+    I:"chisel:voidstone2:13"=0
+    I:"chisel:voidstone2:14"=0
+    I:"chisel:voidstone2:15"=0
+    I:"chisel:voidstone2:2"=0
+    I:"chisel:voidstone2:3"=0
+    I:"chisel:voidstone2:4"=0
+    I:"chisel:voidstone2:5"=0
+    I:"chisel:voidstone2:6"=0
+    I:"chisel:voidstone2:7"=0
+    I:"chisel:voidstone2:8"=0
+    I:"chisel:voidstone2:9"=0
     I:"chisel:voidstone:0"=0
     I:"chisel:voidstone:1"=0
     I:"chisel:voidstone:10"=0
@@ -6791,6 +6839,22 @@ blocks_pickaxe {
     I:"mo:solar_panel:7"=2
     I:"mo:solar_panel:8"=2
     I:"mo:solar_panel:9"=2
+    I:"mo:star_map:0"=2
+    I:"mo:star_map:1"=2
+    I:"mo:star_map:10"=2
+    I:"mo:star_map:11"=2
+    I:"mo:star_map:12"=2
+    I:"mo:star_map:13"=2
+    I:"mo:star_map:14"=2
+    I:"mo:star_map:15"=2
+    I:"mo:star_map:2"=2
+    I:"mo:star_map:3"=2
+    I:"mo:star_map:4"=2
+    I:"mo:star_map:5"=2
+    I:"mo:star_map:6"=2
+    I:"mo:star_map:7"=2
+    I:"mo:star_map:8"=2
+    I:"mo:star_map:9"=2
     I:"mo:transporter:0"=2
     I:"mo:transporter:1"=2
     I:"mo:transporter:10"=2
@@ -8250,6 +8314,22 @@ blocks_shovel {
     I:"TConstruct:GravelOre:3"=3
     I:"TConstruct:GravelOre:4"=1
     I:"TConstruct:GravelOre:5"=7
+    I:"Ztones:cleanDirt:0"=1
+    I:"Ztones:cleanDirt:1"=1
+    I:"Ztones:cleanDirt:10"=1
+    I:"Ztones:cleanDirt:11"=1
+    I:"Ztones:cleanDirt:12"=1
+    I:"Ztones:cleanDirt:13"=1
+    I:"Ztones:cleanDirt:14"=1
+    I:"Ztones:cleanDirt:15"=1
+    I:"Ztones:cleanDirt:2"=1
+    I:"Ztones:cleanDirt:3"=1
+    I:"Ztones:cleanDirt:4"=1
+    I:"Ztones:cleanDirt:5"=1
+    I:"Ztones:cleanDirt:6"=1
+    I:"Ztones:cleanDirt:7"=1
+    I:"Ztones:cleanDirt:8"=1
+    I:"Ztones:cleanDirt:9"=1
     I:"atum:tile.sand:0"=0
     I:"atum:tile.sand:1"=0
     I:"atum:tile.sand:10"=0
