--- a/config/ImmersiveEngineering.cfg
+++ b/config/ImmersiveEngineering.cfg
@@ -180,3 +180,18 @@ oregen {
 }
 
 
+tools {
+    # The amount of base damage an ArmorPiercing Cartridge inflicts
+    I:BulletDamage-AP=7
+
+    # The amount of base damage a single part of Buckshot inflicts
+    I:BulletDamage-Buck=1
+
+    # The amount of base damage a Casull Cartridge inflicts
+    I:BulletDamage-Casull=7
+
+    # The amount of base damage a DragonsBreath Cartridge inflicts
+    I:BulletDamage-Dragon=4
+}
+
+
