--- a/config/atg/biome_modifiers.cfg
+++ b/config/atg/biome_modifiers.cfg
@@ -985,6 +985,17 @@ BiomesOPlenty {
 }
 
 
+"BuildCraft|Robotics" {
+
+    "Ocean Oil Field" {
+        B:AllowVillages=true
+        B:Enable=true
+        D:OccuranceMultiplier=1.0
+    }
+
+}
+
+
 "BuildCraft|Silicon" {
 
     "Desert Oil Field" {
