--- a/config/chisel.cfg
+++ b/config/chisel.cfg
@@ -46,11 +46,15 @@ chisel {
 
 
 client {
+    # Choose whether the inside corner is disconnected on a CTM block - http://imgur.com/eUywLZ4
+    B:connectInsideCTM=false
+
     # Enable connected textures
     B:connectedTextures=true
-
-    # Enable fancy textures
     B:fancyLeaves=true
+
+    # For those people who just hate block descriptions on the world gen!
+    B:imTooGoodForBlockDescriptions=false
 
     # Particle tick rate. Greater value = less particles.
     I:particleTickrate=1
@@ -74,6 +78,7 @@ features {
     B:autoChisel=true
     B:autoChiselUpgrades=true
     B:ballOfMoss=true
+    B:beacon=true
     B:bloodBlock=true
     B:bloodRune=true
     B:bookshelf=true
@@ -194,6 +199,9 @@ general {
 
     # Do you want to enable FMP
     B:enableFMP=true
+
+    # Should concrete be a full block. This will also unavoidably disable speed increase if set to true.
+    B:fullBlockConcrete=false
 }
 
 
