--- a/config/cofh/thermalfoundation/common.cfg
+++ b/config/cofh/thermalfoundation/common.cfg
@@ -222,7 +222,10 @@ Fluid {
 
 
 Lexicon {
-    # This will generate a default list file depending on your list setting. This will ONLY generate if no list file already exists.
+    # This option will generate a fresh blacklist or whitelist EVERY time. This is not recommended, but is provided here as an option if you are satisfied with the defaults.
+    B:AlwaysGenerateList=false
+
+    # This will generate a default list file depending on your list setting. This will ONLY generate if no list file already exists OR you have also enabled list regeneration.
     B:GenerateDefaultList=true
 
     # This will echo all entries to the system log.
