--- a/RevolutionPack.csproj
+++ b/RevolutionPack.csproj
@@ -243,6 +243,7 @@
     <None Include="config\buildcraft\main.conf">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
+    <None Include="config\BuildMod.cfg" />
     <None Include="config\CarpentersBlocks.cfg">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
@@ -281,9 +282,6 @@
     <None Include="config\cofh\world\TwilightForest.json">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
-    <None Include="config\cofh\world\Mars.json">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </None>
     <None Include="config\cofh\world\Atum.json">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
@@ -293,6 +291,7 @@
     <None Include="config\computronics.cfg">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
+    <None Include="config\CoroUtil.cfg" />
     <None Include="config\DamageIndicatorsMod.cfg">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
@@ -440,6 +439,7 @@
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
     <None Include="config\Hats.cfg" />
+    <None Include="config\headcrumbs.cfg" />
     <None Include="config\HoloInventory.cfg" />
     <None Include="config\hqm\editmode.cfg">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
@@ -3243,7 +3243,6 @@
     <None Include="config\roguelike_dungeons\roguelike.cfg">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
-    <None Include="config\SimpleAchievements.cfg" />
     <None Include="config\SimpleAchievements\divConfig.json" />
     <None Include="config\SlimeKnights\Mantle.cfg">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
@@ -3305,6 +3304,12 @@
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
     <None Include="config\yegamolchattels.cfg" />
+    <None Include="config\ZombieAwareness\Features.cfg" />
+    <None Include="config\ZombieAwareness\General.cfg" />
+    <None Include="config\ZombieAwareness\PlayerRulesAndLists.cfg" />
+    <None Include="config\ZombieAwareness\Spawning.cfg" />
+    <None Include="config\Ztones.cfg" />
+    <None Include="config\zyinhud.cfg" />
     <None Include="NOTES.md" />
     <None Include="README.md" />
     <None Include="scripts\AppleMilkTea.zs">
@@ -3313,7 +3318,13 @@
     <None Include="scripts\Atum.zs">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
+    <None Include="scripts\ElectricalAge.zs">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
     <None Include="scripts\BuildcraftAdditions.zs">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Include="scripts\ImmersiveEngineering.zs">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
     <None Include="scripts\Mekanism.zs">
