--- a/config/IguanaTinkerTweaks/ToolDefaults.cfg
+++ b/config/IguanaTinkerTweaks/ToolDefaults.cfg
@@ -1089,3 +1089,25 @@ twilightforest {
 }
 
 
+ztones {
+
+    splataxe {
+        I:axe=-1
+    }
+
+    diamondzane {
+        I:axe=-1
+        I:pickaxe=-1
+        I:shovel=-1
+    }
+
+    terraineater {
+        I:axe=-1
+        I:pickaxe=-1
+        I:shear=-1
+        I:shovel=-1
+    }
+
+}
+
+
