--- a/config/MatterOverdrive/Matter Overdrive.cfg
+++ b/config/MatterOverdrive/Matter Overdrive.cfg
@@ -1,6 +1,6 @@
 # Configuration file
 
-~CONFIG_VERSION: 0.3.4.1
+~CONFIG_VERSION: 0.3.5
 
 ##########################################################################################################
 # client
@@ -91,6 +91,11 @@ client {
         D:volume=1.0
     }
 
+    star_map {
+        # The volume of the Machine
+        D:volume=1.0
+    }
+
 }
 
 
@@ -153,6 +158,42 @@ server {
 
     # Should blocks be turned into falling blocks when broken [default: true]
     B:"gravitational anomaly falling blocks"=true
+
+    # Should other mod fluid blocks be consumed by the anomaly [default: true]
+    B:"gravitational anomaly forge fluids"=true
+
+    # Should vanilla fluid block such as water and lava be consumed by the anomaly [default: true]
+    B:"gravitational anomaly vanilla fluids"=true
+}
+
+
+##########################################################################################################
+# starmap
+#--------------------------------------------------------------------------------------------------------#
+# Star Map Galaxy Options
+##########################################################################################################
+
+starmap {
+    # The maximum amount of planets pre star system [range: 0 ~ 8, default: 4]
+    I:max_planet_count=4
+
+    # The maximum amount of stars in a galaxy [range: 0 ~ 512000, default: 2304]
+    I:max_star_count=2304
+
+    # The minimum amount of planets per star system [range: 0 ~ 8, default: 1]
+    I:min_planet_count=1
+
+    # The minimum amount of stars in a galaxy [range: 0 ~ 512000, default: 2048]
+    I:min_star_count=2048
+
+    # The chance of adding a prefix to a Star System's name [range: 0.0 ~ 1.0, default: 1.0]
+    S:name_prefix_chance=1.0
+
+    # The chance of adding a suffix to a Star System's name [range: 0.0 ~ 1.0, default: 0.8]
+    S:name_suffix_chance=0.8
+
+    # The amount of quadrants the galaxy should be divided into. The amount is cubed. x ^ 3. For example 3 ^ 3 = 27 quadrants. [range: 1 ~ 6, default: 3]
+    I:quadrant_count=3
 }
 
 
@@ -164,9 +205,15 @@ server {
 
 "world gen" {
     # Spawn Chance of Gravity Anomaly pre chunk [range: 0.0 ~ 1.0, default: 0.005]
-    S:"gravitational anomaly spawn chance"=0.005
+    S:"gravitational anomaly spawn chance"=0.01
 
-    # The spawn change of the Rouge Android [range: 0 ~ 100, default: 3]
+    # Dimension id's in which the gravitational anomaly should spawn in
+    I:gravitational_anomaly_dimensions <
+		-28
+     >
+
+    # The spawn change of the Rogue Android [range: 0 ~ 100, default: 3]
+    I:rogue_android.spawn.chance=3
     I:rouge_android.spawn.chance=3
 
     # Should Matter Overdrive Ore Blocks be Generated ?
